# npos-template

./: .gitignore  Cargo.toml  customSpec.json
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/res/: testnet.json
node/cli/src/: cli.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  lib.rs
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: impls.rs
runtime/src/weights/: mod.rs
