[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
hex-literal = "0.3.4"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8"

sc-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", features = ["wasmtime"] }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", features = ["wasmtime"]  }
sc-service = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", features = ["wasmtime"]  }
sc-telemetry = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
node-primitives = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }

sc-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-network = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus-slots = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-authority-discovery =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-authority-discovery =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-chain-spec =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-consensus-epochs =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

sc-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-sync-state-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-rpc-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-basic-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

# Local Dependencies
node-runtime = {  path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

[features]
default = []
runtime-benchmarks = ["node-runtime/runtime-benchmarks"]
