[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
node-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
node_runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-state-machine = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
trie-root = "0.16.0"
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
frame-system = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
node-testing = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-balances = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-contracts = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-grandpa = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-im-online = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-indices = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-session = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-timestamp = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-transaction-payment = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-treasury = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-application-crypto = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
sp-externalities = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
substrate-test-client = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
wat = "1.0"
futures = "0.3.9"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
